# g3sinks

./: .clang-format  .gitignore  .sublime_formatting  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPackLists.txt  CleanAll.cmake  Config.cmake.in  Dockerfile  Functions.cmake  HelpMessage.cmake  Options.cmake  PULL_REQUEST_TEMPLATE.md  README.md  Version.cmake  appveyor.yml  gtest.cmake
.github/ISSUE_TEMPLATE/: question  question.md
.github/workflows/: buildAndRunTests.yml  c-cpp.yml  cmake_build_run_ctest.yml  windows.yml
cmake/: g3sinksConfig.cmake
common/: g3sinksUtils.hpp
examples/: CMakeLists.txt  logrotate_main.cpp  snippet_coloredcout_main.cpp  snippet_filelog_main.cpp  snippet_tracelogging_main.cpp  syslog_main.cpp
g3logrotate/: CMakeLists.txt
g3logrotate/src/: LogRotateHelper.ipp
g3logrotate/src/g3sinks/: LogRotate.h
g3snippets/: CMakeLists.txt  README.markdown
g3snippets/src/g3sinks/: g3logtracelogging.h
g3syslog/: CMakeLists.txt
g3syslog/src/g3sinks/: syslogsink.hpp
logrotate/: CMakeLists.txt  CPackLists.txt  Options.cmake
logrotate/cmake/: g3logrotateConfig.cmake
logrotate/packaging/: g3_logrotate.spec  g3logrotate.spec  logrotate.spec
logrotate/scripts/: buildRpm.sh
logrotate/src/: LogRotate.cpp  LogRotateHelper.ipp  LogRotateUtility.cpp  LogRotateWithFilter.cpp  logrotate.cpp  logrotate.h  logrotatehelper.ipp
logrotate/src/g3sinks/: LogRotate.h  LogRotateUtility.h  LogRotateWithFilter.h
logrotate/test/: FilterTest.cpp  FilterTest.h  RotateFileTest.cpp  RotateFileTest.h  RotateTestHelper.cpp  RotateTestHelper.h  Test.cmake
scripts/: .travis-bootstrap-ubuntu.sh  buildAndRunTests.sh  travis-bootstrap-ubuntu.sh
sink_logrotate/: CMakeLists.txt
sink_logrotate/src/: LogRotate.cpp  LogRotateHelper.ipp  LogRotateUtility.cpp  LogRotateWithFilter.cpp
sink_logrotate/src/g3sinks/: LogRotate.h  LogRotateUtility.h  LogRotateWithFilter.h
sink_snippets/: CMakeLists.txt
sink_snippets/src/g3sinks/: ColorCoutSink.h  ColorCoutSinkLinux.h  ColorCoutSinkWindows.h  FileLogSink.h  g3logtracelogging.h
sink_syslog/: CMakeLists.txt
sink_syslog/src/: syslogsink.cpp
snippets/: CMakeLists.txt  ColorCoutSink.hpp  FileLogSink.hpp  README.markdown  config.h.in  example_ColoredCout.cpp  example_FileLog.cpp  test_FileLog.cpp
snippets/src/g3sinks/: ColorCoutSink.h
syslog/: CMakeLists.txt
syslog/example/: CMakeLists.txt  main.cpp
syslog/src/: syslogsink.cpp
syslog/src/g3log/: syslogsink.hpp
syslog/src/g3sinks/: syslogsink.hpp
syslog/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  FilterTest.cpp  FilterTest.h  RotateFileTest.cpp  RotateFileTest.h  RotateTestHelper.cpp  RotateTestHelper.h
tracelogging/: CMakeLists.txt  CMakeSettings.json  README.md
tracelogging/cmake/: g3log_traceloggingConfig.cmake
tracelogging/example/: CMakeLists.txt
tracelogging/example/src/: tracelogging_example.cpp
tracelogging/include/: g3log_tracelogging.h
